# coordinate_partitioning

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
coordpar/: cut_plane.cpp  cut_plane.hpp  glover.cpp  glover.hpp  main.cpp  partitioned_instance.hpp  partitioned_solver.cpp  partitioned_solver.hpp  result.cpp  result.hpp  solver.hpp
data/: ball.csv  ball_big.csv  cube.csv  cube_big.csv  random_box_large.txt  random_box_small.txt  random_circle.txt
py/coordpar/: cut_plane_solver.py  diversity_problem.py  euclid.py  exclusion.py  partition.py  solver.py
results/: box.ipynb  circle.ipynb  get_results.py
src/: cut_plane.cpp  cut_plane.hpp  diversity_problem.cpp  diversity_problem.hpp  glover.cpp  glover.hpp  main.cpp  partitioned_instance.cpp  partitioned_instance.hpp  partitioned_solver.cpp  partitioned_solver.hpp  result.cpp  semaphore.hpp
visualisation/: exclusion_zones.ipynb  incoming_dist.ipynb  partitioned_zones.ipynb
